TIL 1차시 수정 및 2차시 등록

--- a/Eugene-Shin/1주차/01-06.md
+++ b/Eugene-Shin/1주차/01-06.md
@@ -21,13 +21,13 @@
 - Spring 장점
 	1. POJO(Plain Old Java Object) 기반의 구성
 		- Java만 알아도 Spring Code 작성 가능(다른 언어 등에 의존성 없음)
-	2. IoC(Inversion of Control) - *인터페이스*
+	2. IoC(Inversion of Control)
 		- 객체의 생성, 생명주기, 의존성에 대한 내용을 개발자가 직접 작성하지 않고 프레임워크에 책임을 위임
 		- Spring IoC Container
 			- 객체의 생명주기를 관리하는 런타임
 			- 객체 그래프(Object Graph)를 만들고 관리
 				- 객체 간의 참조 관계 구조
-	3. DI(Dependency Injection) - *구현체*
+	3. DI(Dependency Injection) - IoC의 구현 방법 중 하나
 		- 의존성 주입
 		- 종류
 			- 인터페이스 주입 - 형은 이점을 잘 모르겠다고 함
@@ -36,14 +36,15 @@
 	[https://velog.io/@ohzzi/Spring-DIIoC-IoC-DI-그게-뭔데](https://velog.io/@ohzzi/Spring-DIIoC-IoC-DI-%EA%B7%B8%EA%B2%8C-%EB%AD%94%EB%8D%B0)
 	4. 컴포넌트 스캔과 자동 의존관계 설정
 		- 컴포넌트 스캔
-			- 스프링 시작 시 Bean annotation들을 한 번 쫙 스캔하고 객체 생성을 최초로 한 번 수행
+			- 스프링 시작 시 Component annotation들을 한 번 쫙 스캔하고 객체 생성을 최초로 한 번 수행한 다음 Bean으로 만듦
 				- 수많은 http 요청마다 객체 생성하고 상태 가지게 되면 계속 만들고 삭제해야...(JBM, 인프라구조 커져야 하고 Garbage Collector가 엄청 많이 수행)
 					- cf) Java에는 4개의 thread가 있음, 그 중 GC thread가 엄청 많이 돌아가면 다른 thread가 잘 못 돌아감..
-			- Singleton 패턴이라고 할 수 있음
-				- 클래스 하나에 객체 하나 생성(서비스 객체 하나, configuration 객체 하나..)
+			- Singleton 패턴
+				- 클래스 하나에 객체 하나만 생성(서비스 객체 하나, configuration 객체 하나..)
 				- 객체 삭제는 없음(프로그램이 죽을 때 삭제)
 				- private final로 선언(여러 서비스에서 계속 재사용해야 하므로 상태 가지면 안됨)
-					- cf) 메소드, http 요청 등은 class와 다른 메모리(stack)에서 따로 관리되므로 new 생성자 사용해도 됨
+					- cf) 메소드, dto 등은 class와 다른 메모리(stack)에서 따로 관리되므로 new 생성자 사용 가능
+				- Singleton 패턴을 사용하기에 stateless하게 됨
 			- @autowired 붙어있는 애들은 런타임에서 필요시 집어넣어짐
 				- Spring IoC Container 통해서 만들어 둔 Bean을 등록
 				- 객체 의존관계를 외부에서 넣어줌
