--- a/Eugene-Shin/3차시/01-08.md
+++ b/Eugene-Shin/3차시/01-08.md
@@ -19,7 +19,11 @@
 	- 대체로 자동으로 해 줌
 	- yml을 내장 팩토리 통해 java config로 만들어 줌
 		- 들여쓰기에 민감(틀리면 표시해 줌)
-		- 의존성 있는데 빠져 있으면 자동으로 등록해 주기도 함
+		-  auto configuration
+			- application으로 시작하는 yml과 properties 파일을 찾아 java config 파일을 자동으로 만듦
+			- application-local.yml, application-deploy.yml 등 여러 개 만들어서 매핑으로 원하는 config 만들어 실행하도록 할 수 있음
+		- 의존성 있는데 빠져 있거나 부족한 부분 있으면 자동으로 등록해 주기도 함
+			- `jpa:hibernate:ddl-auto:update`인데 db에 아무것도 없는 경우 hibernate가 자동으로 create문 쏴 줌
 
 ### 3. JAR vs WAR
  - Spring Boot의 JAR(기본 JAR와 좀 다른 개념)
