n + 1 예시 사진 경로 추가

--- a/Eugene-Shin/7차시/01-26.md
+++ b/Eugene-Shin/7차시/01-26.md
@@ -37,7 +37,7 @@
 		- Eager vs Lazy
 			- 기본적으로 Eager(엔티티 조회할 때 hibernate가 자동으로 연관된 모든 엔티티를 SELECT하는 n + 1 문제 발생 가능)
 			- diary 하나만 조회했는데 참조하는 user까지 조회하는 예시
-				- ![[스크린샷 2026-01-26 오후 8.26.05.png]]
+				- ![[./스크린샷 2026-01-26 오후 8.50.25]]
 			- Lazy -> 필요할 때만 조회함
 				- `fetch = FetchType.LAZY` 속성으로 지정 가능
 	- fk 제공하는 쪽에 OneToMany 어노테이션 사용
